--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
@@ -96,12 +96,12 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h4>Modifica tu cuenta</h4>
-						<form class="form-horizontal" id="form-horizontal2" role="form">
+                                                <form class="form-horizontal" id="form-horizontal2" role="form" action="/admin/Profile/update">
 							<div class="form-group">
 								<label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
 								<div class="col-sm-10">
 									<input type="text" class="form-control" id="inputEmail3"
-										placeholder="Nombre">
+                                                                               placeholder="Nombre" name="mname">
 								</div>
 							</div>
 							<div class="form-group">
@@ -109,7 +109,7 @@
 									electrónico</label>
 								<div class="col-sm-10">
 									<input type="email" class="form-control" id="inputEmail3"
-										placeholder="ejemplo@dominio.com">
+                                                                               placeholder="ejemplo@dominio.com" name="memail">
 								</div>
 							</div>
 							<div class="form-group">
@@ -117,7 +117,7 @@
 									antigua</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputEmail3"
-										placeholder="contraseña antigua">
+										placeholder="contraseña antigua" name="mpassword">
 								</div>
 							</div>
 							<div class="form-group">
@@ -125,7 +125,7 @@
 									nueva</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputPassword3"
-										placeholder="contraseña nueva">
+                                                                               placeholder="contraseña nueva" name="mnew_password">
 								</div>
 							</div>
 							<div class="form-group">
@@ -133,7 +133,7 @@
 									contraseña</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputPassword3"
-										placeholder="repetir contraseña">
+                                                                               placeholder="repetir contraseña" name="mrepeat_password">
 								</div>
 							</div>
 
@@ -141,7 +141,7 @@
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
 									<div class="checkbox">
-										<label> <input type="checkbox"> Confirmar
+                                                                            <label> <input type="checkbox" name="mconfirm"> Confirmar
 											todos los cambios
 										</label>
 									</div>
@@ -157,12 +157,12 @@
 					</div>
 					<div class="col-md-6">
 						<h4>Crear nuevo administrador</h4>
-						<form class="form-horizontal" role="form">
+                                                <form class="form-horizontal" role="form" action="/admin/Profile/create" method="post">
 							<div class="form-group">
 								<label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
 								<div class="col-sm-10">
 									<input type="text" class="form-control" id="inputEmail3"
-										placeholder="Nombre">
+                                                                               placeholder="Nombre" name="name">
 								</div>
 							</div>
 							<div class="form-group">
@@ -170,14 +170,14 @@
 									electrónico</label>
 								<div class="col-sm-10">
 									<input type="email" class="form-control" id="inputEmail3"
-										placeholder="ejemplo@dominio.com">
+                                                                               placeholder="ejemplo@dominio.com" name="email">
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="inputEmail3" class="col-sm-2 control-label">Contraseña</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputEmail3"
-										placeholder="contraseña">
+                                                                               placeholder="contraseña" name="password">
 								</div>
 							</div>
 							<div class="form-group">
@@ -185,7 +185,7 @@
 									contraseña</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputPassword3"
-										placeholder="repetir contraseña">
+										placeholder="repetir contraseña" name="repeat_password">
 								</div>
 							</div>
 
@@ -193,7 +193,7 @@
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
 									<div class="checkbox">
-										<label> <input type="checkbox"> Confirmar
+                                                                            <label> <input type="checkbox" name="confirm"> Confirmar
 											todos los cambios
 										</label>
 									</div>
