--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
@@ -135,13 +135,13 @@
 
 							</div>
 							<div class="panel-body">
-                                                            <form class="form-horizontal" role="form" action="/admin/AddBlog/create" method="post">
+                          <!-- Ponemos method post al form-->       <form class="form-horizontal" role="form" action="/admin/AddBlog/create" method="post">
 									<div class="form-group">
 										<label for="inputEmail3" class="col-sm-2 control-label">Título
 											de la noticia</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" id="inputEmail3"
-												placeholder="Título" name="title">
+												placeholder="Título" name="title"> <!--Ponemos en name title (@RP)-->
 										</div>
 									</div>
 									<div class="form-group">
