links, and post of users
also I put a text html editor anda more little things

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addblog.html
@@ -6,22 +6,17 @@
 <title>Admin WAD Wolfram - Noticias</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-<!-- Bootstrap -->
+    <link href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" rel="stylesheet" media="screen">
+ 
 <link data-brackets-id='124'
 	href="/Bootstrap-Admin-Theme/bootstrap/css/bootstrap.min.css"
 	rel="stylesheet">
-<link data-brackets-id='125'
-	href="/Bootstrap-Admin-Theme/vendors/fullcalendar/fullcalendar.css"
-	rel="stylesheet" media="screen">
-<!-- styles -->
-<link data-brackets-id='126'
-	href="/Bootstrap-Admin-Theme/css/styles.css" rel="stylesheet">
+
 
 <link data-brackets-id='127'
 	href="/Bootstrap-Admin-Theme/css/calendar.css" rel="stylesheet">
 
-<!------------------------------------------------------------------------->
+
 <link data-brackets-id='128'
 	href="/Bootstrap-Admin-Theme/bootstrap/css/bootstrap.min.css"
 	rel="stylesheet" media="screen">
@@ -34,31 +29,27 @@
 <link data-brackets-id='131'
 	href="/Bootstrap-Admin-Theme/filtros/assets/DT_bootstrap.css"
 	rel="stylesheet" media="screen">
-<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="vendors/flot/excanvas.min.js"></script><![endif]-->
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+
 <script data-brackets-id='132'
 	src="/Bootstrap-Admin-Theme/filtros/vendors/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
-<!-- jQuery UI -->
+
 <link
 	href="https://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css"
 	rel="stylesheet" media="screen">
 
-<!-- Bootstrap -->
+
 <link href="/Bootstrap-Admin-Theme/bootstrap/css/bootstrap.min.css"
 	rel="stylesheet">
-<!-- styles -->
 <link href="/Bootstrap-Admin-Theme/css/styles.css" rel="stylesheet">
 
 <link href="/Bootstrap-Admin-Theme/css/stats.css" rel="stylesheet">
 
-</head>
 
+</head>
 <body>
+
 	<div class="header">
 		<div class="container">
 			<div class="row">
@@ -70,18 +61,7 @@
 						</h1>
 					</div>
 				</div>
-				<!--<div class="col-md-5">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="input-group form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-	                         <button class="btn btn-primary" type="button">Search</button>
-	                       </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
+			
 				<div class="col-md-2 col-sm-2 col-xs-2" style="margin-left: 180px">
 					<div class="navbar navbar-inverse " role="banner ">
 						<ul class="nav navbar-nav ">
@@ -172,10 +152,16 @@
 									<div class="form-group">
 										<label class="col-sm-2 control-label">Cuerpo de la
 											noticia</label>
+											
+											         
+											
 										<div class="col-sm-10">
-                                                                                    <textarea class="form-control" placeholder="Cuerpo" rows="9" name="cuerpo"></textarea>
+										
+                                                                                    <textarea class="form-control" id="ckeditor_standard" placeholder="Cuerpo" rows="9" name="cuerpo"></textarea>
 										</div>
+								
 									</div>
+
 
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
@@ -293,16 +279,14 @@
 	</footer>
 	
 	
-	<link data-brackets-id='228'
+	
+  	<link data-brackets-id='228'
 		href="/Bootstrap-Admin-Theme/filtros/vendors/datatables/dataTables.bootstrap.css"
 		rel="stylesheet" media="screen">
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script data-brackets-id='229' src="https://code.jquery.com/jquery.js"></script>
-	<!-- jQuery UI -->
 	<script data-brackets-id='230'
 		src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script data-brackets-id='231'
 		src="/Bootstrap-Admin-Theme/filtros/bootstrap/js/bootstrap.min.js"></script>
 
@@ -325,9 +309,9 @@
 	
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>  
 	<!-- jQuery UI -->
-	<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+	<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> 
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="/Bootstrap-Admin-Theme/bootstrap/js/bootstrap.min.js"></script>
 
@@ -359,6 +343,30 @@
 		src="/Bootstrap-Admin-Theme/filtros/vendors/datatables/dataTables.bootstrap.js"></script>
 	<script data-brackets-id='235'
 		src="/Bootstrap-Admin-Theme/js/tables.js"></script>
+		
+
+		
+		 <link rel="stylesheet" type="text/css" href="/Bootstrap-Admin-Theme/filtros/vendors/bootstrap-wysihtml5/src/bootstrap-wysihtml5.css"></link> 
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+ <script src="https://code.jquery.com/jquery.js"></script> 
+    <!-- jQuery UI -->
+     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+   
+    <script src="/Bootstrap-Admin-Theme/filtros/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="/Bootstrap-Admin-Theme/filtros/vendors/bootstrap-wysihtml5/lib/js/wysihtml5-0.3.0.js"></script>
+    <script src="/Bootstrap-Admin-Theme/filtros/vendors/bootstrap-wysihtml5/src/bootstrap-wysihtml5.js"></script>
+
+    <script src="/Bootstrap-Admin-Theme/filtros/vendors/ckeditor/ckeditor.js"></script>
+    <script src="/Bootstrap-Admin-Theme/filtros/vendors/ckeditor/adapters/jquery.js"></script>
+
+    <script type="text/javascript" src="/Bootstrap-Admin-Theme/filtros/vendors/tinymce/js/tinymce/tinymce.min.js"></script>
+
+    <script src="/Bootstrap-Admin-Theme/js/custom.js"></script>
+    <script src="/Bootstrap-Admin-Theme/js/editors.js"></script>
+		
 </body>
 
-</html>
+</html>  
