--- a/WADWolfram/src/main/resources/templates/blog_template.html
+++ b/WADWolfram/src/main/resources/templates/blog_template.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WADWolfram - Proyectos</title>
+    <title>WADWolfram - Noticias</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bootstrap 3 template for corporate business" />
     <!-- css -->
@@ -70,7 +70,7 @@
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/register">Únete</a></li>
-                                    <li><a href="/login">Inicia sesión</a></li>
+                                    <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
                                 </ul>
                             </li>
                         </ul>
