--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -52,7 +52,7 @@
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="/register">Únete</a></li>
-                                        <li><a href="/login">Inicia sesión</a></li>
+                                        <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
                                     </ul>
                                 </li>
                             </ul>
