--- a/WADWolfram/src/main/resources/templates/register.html
+++ b/WADWolfram/src/main/resources/templates/register.html
@@ -51,7 +51,7 @@
                                     <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="/register">Únete</a></li>
-                                        <li><a href="/login">Inicia sesión</a></li>
+                                        <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -80,36 +80,36 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                        <form role="form" class="register-form">
+                        <form class="register-form" role="form" action="/register/create" method="post">
                             <h2>Regístrate <small>Totalmente gratis</small></h2>
                             <hr class="colorgraph">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="Nombre" tabindex="1">
+                                        <input type="text" id="first_name" class="form-control input-lg" placeholder="Nombre" name="aname">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Apellidos" tabindex="2">
+                                        <input type="text" id="last_name" class="form-control input-lg" placeholder="Apellidos" name="lastName">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Nombre de Usuario" tabindex="3">
+                                <input type="text" id="display_name" class="form-control input-lg" placeholder="Nombre de Usuario" name="username">
                             </div>
                             <div class="form-group">
-                                <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
+                                <input type="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" name="aemail">
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Contraseña" tabindex="5">
+                                        <input type="password" id="password" class="form-control input-lg" placeholder="Contraseña" name="apass">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirma la contraseña" tabindex="6">
+                                        <input type="password" id="password_confirmation" class="form-control input-lg" placeholder="Confirma la contraseña" name="apass2">
                                     </div>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                                 <div class="col-xs-12 col-md-6">
                                     <input type="submit" value="Regístrate" class="btn btn-theme btn-block btn-lg" tabindex="7">
                                 </div>
-                                <div class="col-xs-12 col-md-6">¿Tienes ya una cuenta? <a href="login.html">¡Entra en tu cuenta!</a></div>
+                                <div class="col-xs-12 col-md-6">¿Tienes ya una cuenta? <a href="/login">¡Entra en tu cuenta!</a></div>
                             </div>
                         </form>
                     </div>
