--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -53,19 +53,19 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="" width="199" height="52" /></a>
+                        <a class="navbar-brand" href="/"><img src="/img/logo.png" alt="" width="199" height="52" /></a>
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li><a href="index.html">Inicio</a></li>
-                            <li><a href="proyects.html">Proyectos </a></li>
-                            <li><a href="blog_template.html">Noticias </a></li>
-                            <li><a href="contact.html">Contacto </a></li>
-                            <li><a href="about.html">Sobre sus desarrolladores </a></li>
+                            <li><a href="/">Inicio</a></li>
+                            <li><a href="/projects">Proyectos </a></li>
+                            <li><a href="/blog">Noticias </a></li>
+                            <li><a href="/contact">Contacto </a></li>
+                            <li><a href="/about">Sobre sus desarrolladores </a></li>
                             <li class="dropdown active">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="login.html">Cerrar sesión</a></li>
+                                    <li><a href="/login">Cerrar sesión/ Mi cuenta</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -100,7 +100,7 @@
                                         <li id="iteMyDatas"><a href="#" onclick="javascript:changeShow(this)" id="myDatas">Mis datos</a></li>
                                     </ul>
 
-                                    <a href="#" class="btn btn-info col-lg-2 " role="button" id="btn_sesion">Cerrar Sesión</a>
+                                    <a href="/login" class="btn btn-info col-lg-2 " role="button" id="btn_sesion">Cerrar Sesión</a>
 
                                 </div>
                             </nav>
